--- a/index.htm
+++ b/index.htm
@@ -20,7 +20,30 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+        <p class="monospace">GD 220.05</p>
+        <h1 id="graphic-design-2">Graphic Design 2</h1>
+        <p><strong>Spring 2018</strong><br>
+        3 credits <br>
+        BR 304: GD Computer Lab<br>
+        Th 4:00PM - 10:00PM<br>
+        Jan 16, 2018-<br>
+        May 4, 2018</p>
+
+        <ul>
+          <li><a href="#">Shay Bugrais</a></li>
+          <li><a href="#">YJ Chung</a></li>
+          <li><a href="#">Nicholas Claure</a></li>
+          <li><a href="#">Noah Fisher</a></li>
+          <li><a href="#">Lauren Jackson</a></li>
+          <li><a href="#">Sydney Johnson</a></li>
+          <li><a href="#">Samuel Kang</a></li>
+          <li><a href="#">Leah Lee</a></li>
+          <li><a href="#">Kiley McArtney</a></li>
+          <li><a href="#">Zachary Meyers</a></li>
+          <li><a href="#">Jenn Scaraville</a></li>
+          <li><a href="#">August Whitaker</a></li>
+
+        </ul>
 
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
