--- a/index.htm
+++ b/index.htm
@@ -28,7 +28,12 @@
         Th 4:00PM - 10:00PM<br>
         Jan 16, 2018-<br>
         May 4, 2018</p>
+        <h2 id="course-description">Useful Links</h2>
+        <ul>
+          <li><a href="syllabus/">Syllabus</a></li>
+        </ul>
 
+        <h2 id="course-description">Our Class</h2>
         <ul>
           <li><a href="#">Shay Bugrais</a></li>
           <li><a href="#">YJ Chung</a></li>
