--- a/index.htm
+++ b/index.htm
@@ -13,6 +13,7 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+        <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400i,700|Montserrat+Alternates:400,800|Six+Caps" rel="stylesheet">
     </head>
     <body>
         <!--[if lt IE 8]>
@@ -21,7 +22,7 @@
 
         <!-- Add your site or application content here -->
         <p class="monospace">GD 220.05</p>
-        <h1 id="graphic-design-2">Graphic Design 2</h1>
+        <h1 id="graphic-design-2">Graphic <br/> Design 2</h1>
         <p><strong>Spring 2018</strong><br>
         3 credits <br>
         BR 304: GD Computer Lab<br>
@@ -31,6 +32,8 @@
         <h2 id="course-description">Useful Links</h2>
         <ul>
           <li><a href="syllabus/">Syllabus</a></li>
+          <li><a href="https://github.com/MICA-GD2-SPR18-SN">Github Profile</a></li>
+          <li><a href="https://mica.instructure.com/courses/2441">Instructure Page</a></li>
         </ul>
 
         <h2 id="course-description">Our Class</h2>
