Added first assignment

--- a/index.htm
+++ b/index.htm
@@ -23,7 +23,7 @@
         <!-- Add your site or application content here -->
         <p class="monospace">GD 220.05</p>
         <h1 id="graphic-design-2">Graphic <br/> Design 2</h1>
-        <p><strong>Spring 2018</strong><br>
+        <p class="monospace"><strong>Spring 2018</strong><br>
         3 credits <br>
         BR 304: GD Computer Lab<br>
         Th 4:00PM - 10:00PM<br>
