--- a/syllabus/index.html
+++ b/syllabus/index.html
@@ -10,7 +10,6 @@
         <link rel="manifest" href="site.webmanifest">
         <link rel="apple-touch-icon" href="icon.png">
         <!-- Place favicon.ico in the root directory -->
-
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
@@ -214,7 +213,7 @@
 
         <h3 id="plagiarism">Plagiarism</h3>
 
-        <p class="small">Each discipline within the arts has specific and appropriate means for students to cite or acknowledge sources and the ideas and material of others used in their own work. Students have the responsibility to become familiar with such processes and to carefully follow their use in developing original work.</p>
+        <p class="small">Each discipline within the arts has specific and appropriate means for students to cite or acknowledge sources and the ideas and material of others used in their own work. Students have the responsibility to become familiar with such processes and to carefully follow their use in developing original work. Designers should be encouraged to utilize, alter and respond to existing open source resources, such as fonts, code, or stock imagery. Professional designers share resources that can be the building blocks of your design. However, for most contexts, students should cite their sources if they are not completely original.</p>
 
 
 
