--- a/syllabus/index.html
+++ b/syllabus/index.html
@@ -71,7 +71,7 @@
 
         <p>Come prepared to talk about progress you've made on your projects. At the start of every class we are going to briefly go around the room and say we've accomplished that week, what we plan to work on in the coming week, and what, if anything might block us from our goal.</p>
 
-        <p>Remember that you are learning. When presenting completed work, even it's in a state where you arent happy, present it confidently and consicely. Don't point out the flaws. Allow your peers to come to their own conclusions about it. It's ok if a project isn't exactly what you dreamed it would be. Just spend the recommended time on it and remember that you are building skills.</p>
+        <p>Remember that you are learning. When presenting completed work, even it's in a state where you aren't happy, present it confidently and consicely. Don't point out the flaws. Allow your peers to come to their own conclusions about it. It's ok if a project isn't exactly what you dreamed it would be. Just spend the recommended time on it and remember that you are building skills.</p>
 
         <p>It is important that as we work together we build an environment that is constructive and gives people the tools they need to grow as designers on their individual paths. That means participating in critiques by listening to feedback and giving it. Be honest with your peers about what isn't working with their projects. Be kind in your feedback. When you give critique, try and find the way of giving it that you feel might get the person excited about continuing work on their project. When you recieve criticism, try not to take it personally. You don't have to follow every piece of feedback or suggestion to the letter, just try and think through what might be motivating the comment and address it in your own way.</p>
 
@@ -96,7 +96,7 @@
         <h3 id="attendance">Attendance</h3>
 
         <p>Students are expected to attend all meetings of each class in which they are enrolled.
-        Unexcused absences from as few as three (three hour) classes in a three-credit course will result in a failing grade.</p>
+        Absences from as few as three classes in a three-credit course will result in a failing grade.</p>
 
         <p>I do understand the temptation to skip a class if an assignment is not complete. Please join us anyways. Your presences is valued even if an assignment is not finished, and it's not worth further jeopardizing a grade by missing another class.</p>
 
@@ -130,7 +130,7 @@
           <li>Preparation and use of time in class.</li>
         </ul>
       </div>
-        <p>In addition to the <b>three large projects</b> over the course of the semester, you will be asked to write <b>a short (50–100 word) response to each week's reading</b> which will serve as content for your in-class excercises. These responses can be in any format you wish, whether they are a single paragraph of text or a list of thoughts.</p>
+        <p>In addition to the <b>three large projects</b> over the course of the semester, you will be asked to write <b>a short (50–100 word) response to each week's reading</b> which will serve as content for your in-class exercises. These responses can be in any format you wish, whether they are a single paragraph of text or a list of thoughts.</p>
 
         <p>It is important that you keep track of the time you have to complete a project and don't spend too much time on one small or highly technical aspect of it. If you are having trouble with something, talk to me. If you are struggling to make something work in the browser, take a step back and try documenting how it should behave, whether through a diagram, an image sequence, or an animation. It's worth thinking, too, about whether a simpler solution might be nearly as effective as the one you're trying to implement. It's o.k. if a project you turn in is missing functionality in HTML, just make sure to present the full breadth of your thinking in a professional, high-quality way.</p>
 
