--- a/syllabus/index.html
+++ b/syllabus/index.html
@@ -84,8 +84,9 @@
           <li><a>A Sketchbook<span class="source">Always Start Here</span></a></li>
           <li><a href="https://www.sketchapp.com/">Sketch<span class="source">UI Design App</span></a></li>
           <li><a href="https://www.flinto.com/">Flinto<span class="source">UI Design App</span></a></li>
+          <li><a href="https://www.codepen.com">Codepen<span class="source">Online Coding Environment</span></a></li>
+          <li><a href="https://atom.io/">Atom<span class="source">Desktop Code Editor</span></a></li>
           <li><a href="https://github.com/">Github Desktop<span class="source">Easy Git Client</span></a></li>
-          <li><a href="https://atom.io/">Atom<span class="source">Code Editor</span></a></li>
         </ul>
 
         <h3 id="anticipated-costs">Anticipated Costs</h3>
@@ -190,7 +191,7 @@
 
         </ul>
 
-        <h2 id="scheduling-of-student-course-evaluations">Scheduling of student course evaluations</h2>
+        <h2 id="scheduling-of-student-course-evaluations">Course Evaluations</h2>
 
         <p>Class time will be set aside toward the end of the semester for completion of student course evaluations.</p>
 
