--- a/syllabus/index.html
+++ b/syllabus/index.html
@@ -99,7 +99,7 @@
         <p>Students are expected to attend all meetings of each class in which they are enrolled.
         Absences from as few as three classes in a three-credit course will result in a failing grade.</p>
 
-        <p>I do understand the temptation to skip a class if an assignment is not complete. Please join us anyways. Your presences is valued even if an assignment is not finished, and it's not worth further jeopardizing a grade by missing another class.</p>
+        <p>I do understand the temptation to skip a class if an assignment is not complete. Please join us anyways. Your presence is valued even if an assignment is not finished, and it's not worth further jeopardizing a grade by missing another class.</p>
 
         <h3 id="grading">Grading</h3>
 
