--- a/syllabus/index.html
+++ b/syllabus/index.html
@@ -29,10 +29,9 @@
           <span class="two">2</span>
         </div>
     <div class="main-content-well">
-        <p class="monospace">GD 220.05</p>
+        <p class="monospace">GD | 220.05 | Intro to Interaction Design</p>
 
         <h1 id="graphic-design-2">Graphic Design <span class="strikethrough">Too</span> <span class="strikethrough">To</span> Two</h1>
-
         <div class="aside-left monospace">
         <p class="monospace"><strong>Spring 2018</strong><br>
         3 credits <br>
