--- a/assignment-1/index.html
+++ b/assignment-1/index.html
@@ -28,7 +28,7 @@
         <p class="monospace">Assignment 01 | GD 220-01 | SPRING 2016 | 3 CREDITS</p>
 
         <h1 id="graphic-design-2">Lyrical Mapping</h1>
-        <h5>Original assignment by Mark Sanders</h5>
+        <h5>Adapted from an assignment by Mark Sanders</h5>
 
 
         <div class="aside-left monospace">
