--- a/syllabus/index.html
+++ b/syllabus/index.html
@@ -163,7 +163,7 @@
         <ul>
           <li><a href="https://github.com/Heydon/inclusive-design-checklist">Inclusive Web Design Checklist <span class="source">Heydon Pickering</span></a></li>
           <li><a href="http://www.inclusivedesign.no/practical-tools/checklist-article57-127.html">A practical introduction to Inclusive Design for Businesses & Designers <span class="source">inclusivedesign.no</span></a></li>
-
+          <li><a href="https://webaim.org/resources/contrastchecker/">Color Contrast Checker</a></li>
         </ul>
 
         <h3>Learning</h3>
@@ -172,10 +172,15 @@
           <li><a href="https://www.codecademy.com/">Codecademy<span class="source">Supplemental Code Training</span></a></li>
         </ul>
 
-        <h3>Tools</h3>
+        <h3>Code Reference</h3>
+        <ul>
+          <li><a href="https://www.w3schools.com/cssref/default.asp">CSS Properties</a></li>
+          <li><a href="https://caniuse.com/">Can I Use - A  Browser Support Guide</a></li>
+        </ul>
+
+        <h3>Writing/Content Prep</h3>
         <ul>
           <li><a href="https://stackedit.io/editor">Online Markdown Editor</a></li>
-          <li><a href="https://webaim.org/resources/contrastchecker/">Color Contrast Checker</a></li>
         </ul>
 
         <h3>Books</h3>
