Minor text edit
Changed H1 to be really big.

--- a/index.htm
+++ b/index.htm
@@ -22,7 +22,7 @@
 
         <!-- Add your site or application content here -->
         <p class="monospace">GD 220.05</p>
-        <h1 id="graphic-design-2">Graphic <br/> Design 2</h1>
+        <h1 style="font-size:144px;" id="graphic-design-2">Graphic <br/> Design 2</h1>
         <p class="monospace"><strong>Spring 2018</strong><br>
         3 credits <br>
         BR 304: GD Computer Lab<br>
