--- a/index.htm
+++ b/index.htm
@@ -22,7 +22,7 @@
 
         <!-- Add your site or application content here -->
         <p class="monospace">GD 220.05</p>
-        <h1 style="font-size:144px;" id="graphic-design-2">Graphic <br/> Design 2</h1>
+        <h1 id="graphic-design-2">Graphic Design 2</h1>
         <p class="monospace"><strong>Spring 2018</strong><br>
         3 credits <br>
         BR 304: GD Computer Lab<br>
@@ -31,26 +31,28 @@
         May 4, 2018</p>
         <h2 id="course-description">Useful Links</h2>
         <ul>
-          <li><a href="syllabus/">Syllabus</a></li>
-          <li><a href="https://github.com/MICA-GD2-SPR18-SN">Github Profile</a></li>
-          <li><a href="https://mica.instructure.com/courses/2441">Instructure Page</a></li>
+          <li><a target="_blank" href="syllabus/">Syllabus</a></li>
+          <li><a target="_blank" href="https://github.com/MICA-GD2-SPR18-SN">Github Profile</a></li>
+          <li><a target="_blank" href="https://mica.instructure.com/courses/2441">Instructure Page</a></li>
         </ul>
 
         <h2 id="course-description">Our Class</h2>
         <ul>
-          <li><a href="#">Shay Bugrais</a></li>
-          <li><a href="#">YJ Chung</a></li>
-          <li><a href="#">Nicholas Claure</a></li>
-          <li><a href="#">Noah Fisher</a></li>
-          <li><a href="#">Lauren Jackson</a></li>
-          <li><a href="#">Sydney Johnson</a></li>
-          <li><a href="#">Samuel Kang</a></li>
-          <li><a href="#">Leah Lee</a></li>
-          <li><a href="#">Kiley McArtney</a></li>
-          <li><a href="#">Zachary Meyers</a></li>
-          <li><a href="#">Jenn Scaraville</a></li>
-          <li><a href="#">August Whitaker</a></li>
-
+          <li>Shay Bugrais <a target="_blank" href="https://github.com/shbugrais">Github</a> <a href="https://codepen.io/shbugrais">Codepen</a></li>
+          <li>YJ Chung <a target="_blank" href="#">Github</a> <a href="#">Codepen</a></li>
+          <li>Nicholas Claure <a target="_blank" href="https://github.com/nclaure">Github</a> <a href="https://codepen.io/nclaure">Codepen</a></li>
+          <li>Noah Fisher <a target="_blank" href="https://github.com/noahmfisher">Github</a> <a href="https://codepen.io/noahmfisher">Codepen</a></li>
+          <li>Lauren Jackson <a target="_blank" href="https://github.com/ljackson01">Github</a><a href="https://codepen.io/ljackson01">Codepen</a></li>
+          <li>Sydney Johnson <a target="_blank" href="https://github.com/sydneyjohnson">Github</a> <a href="https://codepen.io/sydneyjohnson">Codepen</a></li>
+          <li>Samuel Kang <a target="_blank" href="https://github.com/Skang04">Github</a> <a href="https://codepen.io/Th0muel">Codepen</a></li>
+          <li>Leah Lee <a target="_blank" href="https://github.com/leahlee12">Github</a> <a href="https://codepen.io/leahlee12">Codepen</a></li>
+          <li>Kiley McArtney <a target="_blank" href="https://github.com/kmcartney">Github</a> <a href="https://codepen.io/kmcartney">Codepen</a></li>
+          <li>Zachary Meyers <a target="_blank" href="https://github.com/ZacharyMeyers">Github</a> <a href="https://codepen.io/Meyers">Codepen</a></li>
+          <li>Jenn Scaraville <a target="_blank" href="https://github.com/jscaraville">Github</a> <a href="https://codepen.io/jscaraville">Codepen</a></li>
+          <li>August Whitaker <a target="_blank" href="#">Github</a> <a href="#">Codepen</a></li>
+          <li>Bryan Clarendon <a target="_blank" href="https://github.com/Bclarendon">Github</a> <a href="https://codepen.io/bclarendon">Codepen</a></li>
+          <li>Betty Ho <a target="_blank" href="https://github.com/pho01">Github</a> <a href="https://codepen.io/Pei_Jung">Codepen</a></li>
+          <li>Maren Munoz <a target="_blank" href="https://github.com/musclesmunoz">Github</a> <a href="https://codepen.io/musclesmunoz">Codepen</a></li>
         </ul>
 
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
