--- a/assignment-1/index.html
+++ b/assignment-1/index.html
@@ -45,23 +45,23 @@
         <div class="aside-right monospace">
         <h4>Schedule</h4>
 
-        <p>20 JAN.<br/>
-        Assign: Song selection, lyrics, analysis and sketches. (1–4)</p>
+        <p>1 FEB.<br/>
+        Assign: Song selection, lyrics, analysis and sketches</p>
 
-        <p>27 JAN.<br/>
-        Review work
-        Assign: Symbols / images / text and modular compositions (5–6)</p>
-
-        <p>3 FEB.<br/>
+        <p>8 FEB.<br/>
         Review work<br/>
-        Assign: HTML / CSS structure (7)</p>
+        Assign: Symbols / images / text and modular compositions</p>
 
-        <p>10 FEB.<br/>
+        <p>15 FEB.<br/>
         Review work<br/>
-        Assign: Final project (7–8)</p>
+        Assign: HTML / CSS structure</p>
 
-        <p>17 FEB.<br/>
-        Project due</p>
+        <p>22 FEB.<br/>
+        Final Critique<br/>
+        Assign: Final project edits</p>
+
+        <p>1 MAR.<br/>
+        Final Files Due</p>
         </div>
 
         <ol>
@@ -90,11 +90,21 @@
 
         <h2>Constraints</h2>
         <ul>
-        <li>Must use HTML / CSS modular grid provided</li>
-        <li>Unless part of a photograph, all text must be HTML / CSS</li>
+        <li>Must include every lyric <em>(including repetitions)</em></li>
+        <li>All text must be HTML / CSS</li>
         <li>No interaction beside scrolling</li>
       </ul>
-        </div>
+
+
+
+      </div>
+
+      <div class="call-to-action">
+
+        Download the project files <a class="button inactive">available after week 2</a>
+
+
+      </div>
 
 
         <script src="js/vendor/modernizr-3.5.0.min.js"></script>
