--- a/assignment-1/index.html
+++ b/assignment-1/index.html
@@ -90,7 +90,7 @@
 
         <h2>Constraints</h2>
         <ul>
-        <li>Must include every lyric <em>(including repetitions)</em></li>
+        <li>Must represent every lyric <em>(including repetitions)</em></li>
         <li>All text must be HTML / CSS</li>
         <li>No interaction beside scrolling</li>
       </ul>
@@ -102,7 +102,6 @@
       <div class="call-to-action">
 
         Download the project files <a class="button inactive">available after week 2</a>
-
 
       </div>
 
