--- a/assignment-1/index.html
+++ b/assignment-1/index.html
@@ -101,7 +101,7 @@
 
       <div class="call-to-action">
 
-        Download the project files <a class="button inactive">available after week 2</a>
+        Download the project files <a htref="html5-boilerplate_v6.zip" class="button">HTML5 Boilerplate</a>
 
       </div>
 
