--- a/index.htm
+++ b/index.htm
@@ -38,21 +38,21 @@
 
         <h2 id="course-description">Our Class</h2>
         <ul>
-          <li>Shay Bugrais <a target="_blank" href="https://github.com/shbugrais">Github</a> <a href="https://codepen.io/shbugrais">Codepen</a></li>
+          <li><a target="_blank" href="http://shbugrais.github.io">Shay Bugrais</a> <a target="_blank" href="https://github.com/shbugrais">Github</a> <a href="https://codepen.io/shbugrais">Codepen</a></li>
           <li>YJ Chung <a target="_blank" href="#">Github</a> <a href="#">Codepen</a></li>
-          <li>Nicholas Claure <a target="_blank" href="https://github.com/nclaure">Github</a> <a href="https://codepen.io/nclaure">Codepen</a></li>
-          <li>Noah Fisher <a target="_blank" href="https://github.com/noahmfisher">Github</a> <a href="https://codepen.io/noahmfisher">Codepen</a></li>
-          <li>Lauren Jackson <a target="_blank" href="https://github.com/ljackson01">Github</a><a href="https://codepen.io/ljackson01">Codepen</a></li>
-          <li>Sydney Johnson <a target="_blank" href="https://github.com/sydneyjohnson">Github</a> <a href="https://codepen.io/sydneyjohnson">Codepen</a></li>
-          <li>Samuel Kang <a target="_blank" href="https://github.com/Skang04">Github</a> <a href="https://codepen.io/Th0muel">Codepen</a></li>
-          <li>Leah Lee <a target="_blank" href="https://github.com/leahlee12">Github</a> <a href="https://codepen.io/leahlee12">Codepen</a></li>
-          <li>Kiley McArtney <a target="_blank" href="https://github.com/kmcartney">Github</a> <a href="https://codepen.io/kmcartney">Codepen</a></li>
-          <li>Zachary Meyers <a target="_blank" href="https://github.com/ZacharyMeyers">Github</a> <a href="https://codepen.io/Meyers">Codepen</a></li>
-          <li>Jenn Scaraville <a target="_blank" href="https://github.com/jscaraville">Github</a> <a href="https://codepen.io/jscaraville">Codepen</a></li>
-          <li>August Whitaker <a target="_blank" href="#">Github</a> <a href="#">Codepen</a></li>
-          <li>Bryan Clarendon <a target="_blank" href="https://github.com/Bclarendon">Github</a> <a href="https://codepen.io/bclarendon">Codepen</a></li>
-          <li>Betty Ho <a target="_blank" href="https://github.com/pho01">Github</a> <a href="https://codepen.io/Pei_Jung">Codepen</a></li>
-          <li>Maren Munoz <a target="_blank" href="https://github.com/musclesmunoz">Github</a> <a href="https://codepen.io/musclesmunoz">Codepen</a></li>
+          <li><a target="_blank" href="http://nclaure.github.io">Nicholas Claure</a> <a target="_blank" href="https://github.com/nclaure">Github</a> <a href="https://codepen.io/nclaure">Codepen</a></li>
+          <li><a target="_blank" href="http://noahmfisher.github.io">Noah Fisher</a> <a target="_blank" href="https://github.com/noahmfisher">Github</a> <a href="https://codepen.io/noahmfisher">Codepen</a></li>
+          <li><a target="_blank" href="http://ljackson01.github.io">Lauren Jackson</a> <a target="_blank" href="https://github.com/ljackson01">Github</a><a href="https://codepen.io/ljackson01">Codepen</a></li>
+          <li><a target="_blank" href="http://sydneyjohnson.github.io">Sydney Johnson</a> <a target="_blank" href="https://github.com/sydneyjohnson">Github</a> <a href="https://codepen.io/sydneyjohnson">Codepen</a></li>
+          <li><a target="_blank" href="http://Skang04.github.io">Samuel Kang</a> <a target="_blank" href="https://github.com/Skang04">Github</a> <a href="https://codepen.io/Th0muel">Codepen</a></li>
+          <li><a target="_blank" href="http://kmcartney.github.io">Leah Lee</a> <a target="_blank" href="https://github.com/leahlee12">Github</a> <a href="https://codepen.io/leahlee12">Codepen</a></li>
+          <li><a target="_blank" href="http://ljackson01.github.io">Kiley McArtney</a> <a target="_blank" href="https://github.com/kmcartney">Github</a> <a href="https://codepen.io/kmcartney">Codepen</a></li>
+          <li><a target="_blank" href="http://ZacharyMeyers.github.io">Zachary Meyers</a> <a target="_blank" href="https://github.com/ZacharyMeyers">Github</a> <a href="https://codepen.io/Meyers">Codepen</a></li>
+          <li><a target="_blank" href="http://jscaraville.github.io">Jenn Scaraville</a> <a target="_blank" href="https://github.com/jscaraville">Github</a> <a href="https://codepen.io/jscaraville">Codepen</a></li>
+          <li><a target="_blank" href="http://ljackson01.github.io">August Whitaker</a> <a target="_blank" href="#">Github</a> <a href="#">Codepen</a></li>
+          <li><a target="_blank" href="http://Bclarendon.github.io">Bryan Clarendon</a> <a target="_blank" href="https://github.com/Bclarendon">Github</a> <a href="https://codepen.io/bclarendon">Codepen</a></li>
+          <li><a target="_blank" href="http://pho01.github.io">Betty Ho</a> <a target="_blank" href="https://github.com/pho01">Github</a> <a href="https://codepen.io/Pei_Jung">Codepen</a></li>
+          <li><a target="_blank" href="http://musclesmunoz.github.io">Maren Munoz</a> <a target="_blank" href="https://github.com/musclesmunoz">Github</a> <a href="https://codepen.io/musclesmunoz">Codepen</a></li>
         </ul>
 
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
