--- a/index.htm
+++ b/index.htm
@@ -39,7 +39,6 @@
         <h2 id="course-description">Our Class</h2>
         <ul>
           <li><a target="_blank" href="http://shbugrais.github.io">Shay Bugrais</a> <a target="_blank" href="https://github.com/shbugrais">Github</a> <a href="https://codepen.io/shbugrais">Codepen</a></li>
-          <li>YJ Chung <a target="_blank" href="#">Github</a> <a href="#">Codepen</a></li>
           <li><a target="_blank" href="http://nclaure.github.io">Nicholas Claure</a> <a target="_blank" href="https://github.com/nclaure">Github</a> <a href="https://codepen.io/nclaure">Codepen</a></li>
           <li><a target="_blank" href="http://noahmfisher.github.io">Noah Fisher</a> <a target="_blank" href="https://github.com/noahmfisher">Github</a> <a href="https://codepen.io/noahmfisher">Codepen</a></li>
           <li><a target="_blank" href="http://ljackson01.github.io">Lauren Jackson</a> <a target="_blank" href="https://github.com/ljackson01">Github</a><a href="https://codepen.io/ljackson01">Codepen</a></li>
@@ -51,7 +50,7 @@
           <li><a target="_blank" href="http://jscaraville.github.io">Jenn Scaraville</a> <a target="_blank" href="https://github.com/jscaraville">Github</a> <a href="https://codepen.io/jscaraville">Codepen</a></li>
           <li><a target="_blank" href="http://ljackson01.github.io">August Whitaker</a> <a target="_blank" href="#">Github</a> <a href="#">Codepen</a></li>
           <li><a target="_blank" href="http://Bclarendon.github.io">Bryan Clarendon</a> <a target="_blank" href="https://github.com/Bclarendon">Github</a> <a href="https://codepen.io/bclarendon">Codepen</a></li>
-          <li><a target="_blank" href="http://pho01.github.io">Betty Ho</a> <a target="_blank" href="https://github.com/pho01">Github</a> <a href="https://codepen.io/Pei_Jung">Codepen</a></li>
+          <li><a target="_blank" href="http://pho01.github.io">Pei Jung Ho</a> <a target="_blank" href="https://github.com/pho01">Github</a> <a href="https://codepen.io/Pei_Jung">Codepen</a></li>
           <li><a target="_blank" href="http://musclesmunoz.github.io">Maren Munoz</a> <a target="_blank" href="https://github.com/musclesmunoz">Github</a> <a href="https://codepen.io/musclesmunoz">Codepen</a></li>
         </ul>
 
