--- a/syllabus/index.html
+++ b/syllabus/index.html
@@ -165,9 +165,9 @@
 
           <li class="inactive">Spring Break<span class="source">no class</span></li>
 
-          <li><span class="agenda-item">Project 3 Cont'd</span><span class="agenda-item">Project 3 Cont'd</span><a href="https://mica.instructure.com/files/73642/download?download_frd=1">Looks Much Better Now: On The White Utopian Gaze<span class="source">Mark Gunnery for Hyrsteria Zine</span></a></li>
+          <li><span class="agenda-item">Project 3 Cont'd</span><a href="https://mica.instructure.com/files/73642/download?download_frd=1">Looks Much Better Now: On The White Utopian Gaze<span class="source">Mark Gunnery for Hyrsteria Zine</span></a></li>
 
-          <li><span class="agenda-item">*FIELD TRIP* Project 3 Cont'd</span></li>
+          <li><span class="agenda-item">*FIELD TRIP* Project 3 Cont'd</span><a href="https://ourdataourselves.tacticaltech.org/posts/30-on-weaponised-design/">On Weaponised Design<span class="source">Cade for Our Data Our Selves</span></a></li>
 
           <li><span class="agenda-item">Project 3 Final Critique</span></li>
         </ol>
