--- a/assignment-2/index.html
+++ b/assignment-2/index.html
@@ -25,9 +25,9 @@
         <!-- Add your site or application content here -->
 
     <div class="main-content-well">
-        <p class="monospace">Assignment 01 | GD 220-01 | SPRING 2016 | 3 CREDITS</p>
+        <p class="monospace">Assignment 02 | GD 220-01 | SPRING 2016 | 3 CREDITS</p>
 
-        <h1 id="graphic-design-2">Lyrical Mapping</h1>
+        <h1 id="graphic-design-2">Day in Your Life</h1>
         <h5>Adapted from an assignment by Mark Sanders</h5>
 
 
@@ -37,7 +37,9 @@
       </div>
 
 
-
+        <h2 id="course-description">Problem</h2>
+        <p>
+Design and develop web pages for a collaborative / interactive storytelling project presenting a day in the life of a MICA Graphic Design student. Through typography, composition and images, enhance how someone visually experiences your day. Build a one-page web site based on your design.</p>
 
 
         <h2 id="course-description">Process</h2>
@@ -45,54 +47,49 @@
         <div class="aside-right monospace">
         <h4>Schedule</h4>
 
-        <p>1 FEB.<br/>
-        Assign: Song selection, lyrics, analysis and sketches</p>
+        <p>Week 1<br/>
+        Assign: Document your assigned day</p>
 
-        <p>8 FEB.<br/>
+        <p>Week 2<br/>
         Review work<br/>
-        Assign: Symbols / images / text and modular compositions</p>
+        Assign: Content organization and sketches</p>
 
-        <p>15 FEB.<br/>
+        <p>Week 3<br/>
         Review work<br/>
         Assign: HTML / CSS structure</p>
 
-        <p>22 FEB.<br/>
-        Final Critique<br/>
-        Assign: Final project edits</p>
+        <p>Week 4<br/>
+        Review work<br/>
+        Assign: CSS styling</p>
 
-        <p>1 MAR.<br/>
-        Final Files Due</p>
+        <p>Week 5<br/>
+        Final Critique</p>
         </div>
 
         <ol>
-          <li>Pick a song that has lyrics</li>
-          <li>Extract all the lyrics as text. Be sure to type them exactly as they appear in the song, ie.
-          preserve repetition or word/syllable/line breaks.</li>
+          <li>Take a photo every hour (while you are awake) of your
+          assigned day. This image should describe either where you
+          are or what you are doing at this time. Write down a captionfor each photo as you take them. Two or more of thesehours must include at least two paragraphs each of detailed description about what you are doing the moment the photo was taken. Photos must be at least 1200 pixels wide (hopefully much larger).</li>
+          
+          <li>Organize your gathered content, focusing on how each hour is visually connected (or disconnected) to the next, as well as all the others. Crop photos or edit text as needed to clarify. Enhance hierarchy and communication through composition and typography.</li>
 
-          <li>Analyze the <em>rhythm</em> and <em>sequence</em> of the lyrics. Is it even
-          throughout? Are there more <em>powerful</em> moments? Does it
-          <em>build</em>? Do any elements <em>repeat</em>? Is there a <em>transformation</em>?</li>
+          <li>Sketch mock-ups of the overall structure of your timeline, as well as the individual hourly modules of time. What remains consistent? What changes? Why?</li>
 
-          <li>Sketch vertical compositions that visually represent your analysis and interpretation of the
-          lyrics. What do lateral or vertical movement communicate? What do white space and gaps
-          communicate? What does size communicate? What does density communicate?</li>
+          <li>Translate the overall structure of your timeline into HTML / CSS.</li>
 
-          <li>Create symbols, images and/or typography to represent your interpretation of the song lyrics.</li>
+          <li>Style type, images, backgrounds, textures, rules, etc. with CSS.</li>
 
-          <li>Translate sketches into a modular composition that utilizes scale, form, and counter form to
-          visually communicate your interpretation of the lyrics.</li>
+          <li>Troubleshoot and refine your work as needed.</li>
 
-          <li>Combine modular structure, symbol, image, and text into a coded (HTML/CSS) map for
-          your interpretation of the song lyrics.</li>
-
-          <li>Refine your lyrical map based on feedback from classmates.</li>
         </ol>
 
         <h2>Constraints</h2>
         <ul>
-        <li>Must represent every lyric <em>(including repetitions)</em></li>
-        <li>All text must be HTML / CSS</li>
-        <li>No interaction beside scrolling</li>
+        <li>The title for your page must be the date of the day you chronicled.</li>
+        <li>The specific time / hour must be displayed in addition to your content.</li>
+        <li>Each hour of your day must have one photo and a corresponding caption. At least 2 hours of your day much each include at least 2 paragraphs of supporting text in addition to photo / caption.</li>
+        <li>All content (images and text) and supporting graphics must be your own.</li>
+        <li>Unless part of a photograph, all text must be HTML / CSS.</li>
       </ul>
 
 
