--- a/assignment-2/index.html
+++ b/assignment-2/index.html
@@ -24,6 +24,15 @@
 
         <!-- Add your site or application content here -->
 
+        <div class="a2-image-illustration">
+      <div class="img-line"></div>
+      <div class="img-shadow"></div>
+      <div class="img-textbubble1"><img src="../img/a2/textbubble1.png"></div>
+      <div class="img-textbubble2"><img src="../img/a2/textbubble2.png"></div>
+      <div class="img-imgbubble1"><img src="../img/a2/imgbubble1.png"></div>
+      <div class="img-imgbubble2"><img src="../img/a2/imgbubble2.png"></div>
+    </div>
+
     <div class="main-content-well">
         <p class="monospace">Assignment 02 | GD 220-01 | SPRING 2016 | 3 CREDITS</p>
 
@@ -70,7 +79,7 @@ Design and develop web pages for a collaborative / interactive storytelling proj
           <li>Take a photo every hour (while you are awake) of your
           assigned day. This image should describe either where you
           are or what you are doing at this time. Write down a captionfor each photo as you take them. Two or more of thesehours must include at least two paragraphs each of detailed description about what you are doing the moment the photo was taken. Photos must be at least 1200 pixels wide (hopefully much larger).</li>
-          
+
           <li>Organize your gathered content, focusing on how each hour is visually connected (or disconnected) to the next, as well as all the others. Crop photos or edit text as needed to clarify. Enhance hierarchy and communication through composition and typography.</li>
 
           <li>Sketch mock-ups of the overall structure of your timeline, as well as the individual hourly modules of time. What remains consistent? What changes? Why?</li>
