--- a/assignment-2/index.html
+++ b/assignment-2/index.html
@@ -17,7 +17,7 @@
         <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,700" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Hanalei+Fill|Shrikhand" rel="stylesheet">
     </head>
-    <body class="assignment-1">
+    <body class="assignment-2">
         <!--[if lte IE 9]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
         <![endif]-->
@@ -36,7 +36,7 @@
     <div class="main-content-well">
         <p class="monospace">Assignment 02 | GD 220-01 | SPRING 2016 | 3 CREDITS</p>
 
-        <h1 id="graphic-design-2">Day in Your Life</h1>
+        <h1 id="graphic-design-2">A Day in Your Life</h1>
         <h5>Adapted from an assignment by Mark Sanders</h5>
 
 
@@ -56,24 +56,31 @@ Design and develop web pages for a collaborative / interactive storytelling proj
         <div class="aside-right monospace">
         <h4>Schedule</h4>
 
-        <p>Week 1<br/>
-        Assign: Document your assigned day</p>
+        <p>March 1<br/>
+        Assign: Document your assigned day, record in google sheet.</p>
 
-        <p>Week 2<br/>
+        <p>March 8<br/>
         Review work<br/>
-        Assign: Content organization and sketches</p>
+        In-class: Content organization &amp; sketches</br>
+        Assign: CSS styling;
+        </p>
 
-        <p>Week 3<br/>
-        Review work<br/>
-        Assign: HTML / CSS structure</p>
+        <div class="inactive"><p>March 15<br/>
+        No Class, Spring Break</div>
 
-        <p>Week 4<br/>
+        <p>March 22<br/>
         Review work<br/>
         Assign: CSS styling</p>
 
-        <p>Week 5<br/>
+        <p>March 29<br/>
         Final Critique</p>
+
+        <p>April 5<br/>
+        Final Files Due</p>
         </div>
+
+
+
 
         <ol>
           <li>Take a photo every hour (while you are awake) of your
